--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -2,7 +2,7 @@
   "新型コロナウイルス感染症が心配なときに": "Jika anda peduli tentang COVID-19",
   "詳細を見る（東京都福祉保健局）": "Untuk informasil lebih lanjut: situs Biro Kesejahteraan Sosial dan Kesehatan Publik",
   "県内の最新感染動向": "Pembaharuan tentang COVID-19 di Oita",
-  "県内の最新支援状況": "Latest updates on Support in Oita",
+  "県内の最新支援状況": "Kabar terbaru tentang Bantuan di Oita",
   "感染が疑われるときは": "Jika anda merasa terinfeksi",
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Jika anda merasa mempunyai masalah, konsultasi melalui telepon",
   "相談の手順を見る": "Alur Konsultasi",
@@ -12,27 +12,28 @@
   "検査実施数": "Jumlah tes yang telah dilakukan",
   "新型コロナコールセンター相談件数": "Jumlah panggilan telepon ke Pusat Layanan Coronavirus Oita",
   "相談窓口相談件数": "Jumlah penanya ke bagian konsultasi COVID-19",
-  "新型コロナウイルス関連の大分県における融資の利用状況 (業種別件数)": "Usage Stats of Loan (Number of Loan by Industry)",
-  "新型コロナウイルス関連の大分県における融資の利用状況 (融資実績)": "Usage Stats of Loan (Amount of Money)",
-  "飲食業": "Restaurant",
-  "サービス業（宿泊除く）": "Hospitality",
-  "宿泊業": "Lodging",
-  "小売業": "Retail",
-  "卸売業": "Wholesale",
-  "建設業": "Building",
-  "製造業": "Manufacturing",
-  "がんばろう！おおいた資金繰り応援資金 (累計値)": "Supprt fund",
-  "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "Countermeasure fund",
-  "雇用調整助成金の申請に関する相談件数": "Number of consultations to apply subsidy",
-  "雇用調整助成金の支給決定件数": "Number of application subsidy (applications, paid)",
-  "申請書受付件数 (累計値)": "applications",
-  "支給決定件数": "number of paid cases",
-  "支給決定件数 (累計値)": "paid",
-  "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "To labar bureau",
-  "大分県 (TEL 0120-575-626) への1週間ごとの相談件数": "To Oita pref.",
+  "新型コロナウイルス関連の大分県における融資の利用状況 (業種別件数)": "Statistik Penggunaan Pinjaman (Jumal Pinjaman menurut Bidang Usaha)",
+  "新型コロナウイルス関連の大分県における融資の利用状況 (融資実績)": "Statistik Penggunaan Pinjaman (Jumlah Uang)",
+  "飲食業": "Restoran",
+  "サービス業（宿泊除く）": "Hiburan",
+  "宿泊業": "Penginapan",
+  "小売業": "Usaha Ritel",
+  "卸売業": "Usaha Grosir",
+  "建設業": "Pergedungan",
+  "建設業": "Pergedungan",
+  "製造業": "Pabrikan",
+  "がんばろう！おおいた資金繰り応援資金 (累計値)": "Dana Bantuan",
+  "新型コロナウイルス感染症緊急対策特別資金 (累計値)": "Dana Penanggulangan",
+  "雇用調整助成金の申請に関する相談件数": "Jumlah konsultasi untuk mendapatkan subsidi",
+  "雇用調整助成金の支給決定件数": "Jumlah pendaftar subsidi (permohonan, terbayar)",
+  "申請書受付件数 (累計値)": "permohonan",
+  "支給決定件数": "Jumlah pemohon yang dibayar",
+  "支給決定件数 (累計値)": "terbayar",
+  "労働局 (TEL 097-535-2100) への1週間ごとの相談件数": "Ke Biro Ketenagakerjaan",
+  "大分県 (TEL 0120-575-626) への1週間ごとの相談件数": "Ke Prefektur Oita",
   "都営地下鉄の利用者数の推移": "Estimasi jumlah penumpang subway Toei",
-  "都庁来庁者数の推移": "Jumalh pengunjung ke gedung pemerintahan Prefektur Oita",
-  "都内発生（疑い例・接触者調査）": "Wabah di Oita (terkonfirmasi melalui tes terhadap tersangka pengidap atau pernah terpapar dengan pengidap)",
+  "都庁来庁者数の推移": "Jumlah pengunjung ke gedung pemerintahan Prefektur Oita",
+  "都内発生（疑い例・接触者調査）": "Wabah di Oita (terkonfirmasi melalui tes terhadap tersangka pengidap, atau pernah terpapar dengan pengidap)",
   "その他（チャーター便・クルーズ船）": "Lainnya (Kembali terpapar atau penumpang awak kapal pesiar)",
   "{date}の累計": "Jumlah kumulatif pada {date}",
   "期間: {duration}": "Periode: {duration}",
@@ -46,11 +47,11 @@
     "teruji": "kasus",
     "laporan": "pertanyaan"
   },
-  "億円": "(100M yen)",
-  "うち": "among",
+  "億円": "(juta yen)",
+  "うち": "terbagi antara",
   "日付": "tanggal",
   "公表日": "Tanggal Publikasi",
-  "居住地": "Tempat tinggal",
+  "居住地": "Tempat Tinggal",
   "年代": "Umur",
   "性別": "Jenis Kelamin",
   "都内": "Oita",
@@ -62,7 +63,7 @@
   "男性": "Laki-laki",
   "女性": "Perempuan",
   "退院※": "Keluar dari rumah sakit*",
-  "臨時休校中の新型コロナウイルス感染症対応についてのお願い": "Bagaimana menghadapi COVID-19 saat penutupan sekolah darurat sementara",
+  "臨時休校中の新型コロナウイルス感染症対応についてのお願い": "Bagaimana menghadapi COVID-19 saat penutupan sekolah sementara",
   "感染予防・健康管理": "Pencegahan infeksi dan pengelolaan kesehatan",
   "不特定多数の人の集まる場所等への外出を避け、基本的に自宅で過ごしてください。": "Jauhi kerumunan, daerah ramai, dan tinggal di rumah.",
   "手洗い、咳エチケット等により、感染予防に努めてください。": "Lakukan usaha pencegahan dengan meminta semua orang membasuh tangan secara teratur dan terapkan etika batuk.",
@@ -70,19 +71,19 @@
   "規則正しい生活を心がけ、日常の健康管理に十分気を付けてください。": "Jaga rutinitas semampunya dan periksa secara teratur kesehatan anak-anak.",
   "感染症を疑う場合の対応": "Jika anda curiga bahwa anak anda telah terjangkit",
   "各保健所にご相談ください": "Jika anak anda memiliki tanda sejenis flu, demam dengan suhu 37.5 derajat Celsius atau lebih tinggiselama 4 hari, sangat kelelahan, atau mengalami susan pernafasan, hubungi pusat kesehatan setempat.",
-  "「新型コロナウイルス感染症にかかる相談窓口について」": "Lihat halaman: Bagian Konsultasi untuk COVID-19  (Pemerintahan Prefektur Oita Biro Kesejahteraan Sosial dan Kesehatan Publik)",
+  "「新型コロナウイルス感染症にかかる相談窓口について」": "Lihat halaman: Bagian Konsultasi untuk COVID-19  (Pemerintahan Prefektur Oita Biro Kesejahteraan Sosial dan Kesehatan Publik)",
   "その他": "Informasi Lain",
   "詳細は、各学校からのお知らせ等をご確認ください。": "Untuk detilnya: periksa informasi dari sekolah anda.",
   "企業の皆様・はたらく皆様へ": "Untuk perusahaan dan siapa saja yang bekerja di Oita",
-  "新型コロナウイルス感染症に対応した制度融資": "Kebijakan pinjaman terarah untuk melawan COVID-19",
+  "新型コロナウイルス感染症に対応した制度融資": "Kebijakan pinjaman spesifik untuk melawan COVID-19",
   "感染症により事業活動に影響を受けている中小企業等を対象とした制度融資（「緊急融資」、「緊急借換」、「危機対応融資」）です。いずれも融資限度額は2億8千万円で、信用保証料を都が補助します。": "Ini adalah pinjaman keuangan (\"pinjaman darurat\", \"pembiayaan darurat\", \"pinjaman tanggap bencana\") untuk usaha kecil dan menengah yang terkena imbas COVID-19.Batas pinjaman adalah 280 juta yen dan Pemerintahan Prefektur Oita akan memberi subsidi biaya jaminan peminjaman.",
-  "新型コロナウイルスによる経営課題に関する専門家派遣": "Para pakar akan memberikan saran tentang tantangan berusaha di saat COVID-19",
+  "新型コロナウイルスによる経営課題に関する専門家派遣": "Para ahli akan memberikan saran tentang tantangan usaha di saat COVID-19",
   "新型コロナウイルス感染症により経営面の影響を受けている中小企業を対象に、中小企業診断士等の専門家を無料で派遣し、経営改善等に向けたアドバイスを実施します（1社あたり4回まで・無料）。": "Untuk usaha kecil dan menengah yang terkena imbas COVID-19: kami akan mengerahkan spesialis, seperti konsultan gratis untuk usaha kecil dan menengah, dan juga saran dalam meningkatkan pengelolaan usaha. (Gratis sampai dengan 4 kali untuk setiap usaha)",
   "中小企業従業員融資": "Pinjaman pekerja usaha kecil dan menengah",
   "感染症等の影響による休業での収入減等に備え、中小企業の従業員向けに実質無利子の融資を行います（融資限度額100万円）。": "Sebagai usaha persiapan dalam potensi kehilangan pendapatan karena pembatasan usaha terkait COVID-19, Pemerintahan Prefektur Oita akan memberikan pinjaman tanpa bunga untuk usaha kecil menengah (maksimal 1 juta yen).",
-  "新型コロナウイルス感染症に係る休業等支援事業（専門家派遣）": "Pengerahan masalah pengelolaan karena COVID-19",
+  "新型コロナウイルス感染症に係る休業等支援事業（専門家派遣）": "Pengerahan konsultan masalah tata kelola usaha karena COVID-19",
   "感染症の拡大を理由とする従業員の休業等にあたり、国の雇用調整助成金の特例措置等を利用する中小企業等を対象に、社会保険労務士派遣による相談助言を行います（1社5回まで。無料）。": "Pemerintahan Prefektur Oita akan menyediakan konsultasi dengan mengerahkan pengacara Keamanan Tenaga Kerja dan Sosial untuk usaha kecil menengah yang memanfaatkan skema khusus seperti program nasional penyesuaian pekerjaan karena COVID-19 (bebas biaya sampai 5 kali pertemuan untuk setiap usaha).",
-  "新型コロナウイルス感染症対策雇用環境整備促進事業": "Proyek peningkatan lingkungan kerja untuk menghadapi COVID-19",
+  "新型コロナウイルス感染症対策雇用環境整備促進事業": "Proyek perbaikan lingkungan kerja dalam menghadapi COVID-19",
   "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む都内中小企業に奨励金を支給します（1事業所10万円）。": "Dengan memanfaatkan program nasional penyesuaian pekerjaan terkait COVID-19, Pemerintahan Prefektur Oita akan menyediakan insentif finansial untuk usaha kecil menengah di Oita untuk meningkatkan kondisi lingkungan kerja, seperti pembagian waktu dan beban kerja di saat darurat.\n(100,000 yen untuk setiap tempat usaha).",
   "テレワーク導入モデル体験事業": "Menerapkan sistem kerja jarak jauh dalam masa percobaan",
   "テレワーク導入を検討している中堅・中小企業等を対象に、テレワークを体験できる端末やツールを無償貸与することにより、テレワークのメリット・効果を体感できる機会を提供します。": "Untuk usaha kecil dan menengah yang sedang mempertimbangkan penerapan sistem kerja jarak jauh, Pemerintaha Prefektur Oita akan memberi pinjaman peralatan secara bebas biaya, memberikan kesempatan untuk merasakan pengalaman dalam situasi sistem kerja jarak jauh (teleworking).",
@@ -117,7 +118,7 @@
   "当サイトへのリンクは自由です。": "Tidak diperlukan ijin untuk mengarahkan tautan ke situs ini.",
   "JavaScriptについて": "Tentang JavaScript",
   "当サイトではJavaScriptを使用しております。": "Situs ini menggunakan JavaScript.",
-  "JavaScriptを無効にして使用された場合、各ページが正常に動作しない、または、表示されない場合がございます。": "Jika JavaScript dilumpuhkan, isi atau fungsi situs menjadi terbatas atau tidak tersedia. ",
+  "JavaScriptを無効にして使用された場合、各ページが正常に動作しない、または、表示されない場合がございます。": "Jika JavaScript dilumpuhkan, isi atau fungsi situs menjadi terbatas atau tidak tersedia. ",
   "当サイトをご利用の際には、JavaScriptを有効にして頂きますようお願いいたします。": "Mohon pastikan untuk menghidupkan JavaScript ketika menjelajahi situs ini.",
   "クッキー (Cookie) について": "Tentang cookies",
   "当サイトの一部ではクッキーを使用しています。": "Situs ini menggunakan cookies.",
@@ -178,7 +179,7 @@
   "新型コロナウイルス感染症": "COVID-19",
   "対策サイト": "Situs Gugus Tugas",
   "最終更新": "Pembaruan terkini",
-  "注釈": "Ini adalah terjemahan darurat. Mohon pengertiannya bahwa ada kemungkinan penerjemahan yang tidak akurat.",
+  "注釈": "Ini adalah terjemahan darurat, terdapat kemungkinan penerjemahan yang tidak akurat.",
   "print": "Cetak",
   "サイドメニュー項目を開く": "Buka isian menu samping",
   "サイドメニュー項目を閉じる": "Tutup isian menu samping",
