Fix translation of "件"

--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -44,8 +44,8 @@
   "2月25日~28日": "dari 5 to 28 Februari",
   "人": "orang",
   "件": {
-    "teruji": "kasus",
-    "laporan": "pertanyaan"
+    "tested": "kasus",
+    "reports": "pertanyaan"
   },
   "億円": "(juta yen)",
   "うち": "terbagi antara",
